# chatbtc

./: .gitignore  LICENSE  README.md  requirements.txt
chatbtc-nostr/: Cargo.toml
chatbtc-nostr-rust/src/: old.rs
chatbtc-nostr-ts/: package-lock.json  package.json  tsconfig.json
chatbtc-nostr-ts/src/: index.ts
chatbtc-nostr/src/: main.rs
chatbtc-telegram/: requirements.txt
chatbtc-telegram/src/: bot.py  gpt.py
ecs-user@localhost/: invoice.macaroon  tls.cert
src/: bot.py  gpt.py  lnd.py  rapaygo.py
