[package]
name = "chatbtc-nostr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
nostr-sdk = "0.21.0"
tokio = { version = "1", features = ["full"] }
nostr-bot = "0.2"
image = "0.24.6"